@@ -23,6 +23,7 @@ remove = File::Basename
 remove = File::Spec
 remove = FindBin
 remove = Win32::Shortcut
+remove = Win32
 
 remove = My::ModuleBuild
 
